<resources>
    <string name="app_name">Iteration1</string>
    <string name="helpTitle">Help</string>
    <string name="helpTitle2">Collect cards!</string>
    <string name="helpDescription">In a "Time Solo Deck" game of FindDaMatch, the goal is to discard a deck of cards as quickly as possible
        by finding matching icons between two cards at a time.\n\n
        The game begins by separating one random card as the top of the discard pile, leaving the rest in the draw pile.\n\n
        You are to spot any matching symbol between the card at the top of the discard pile and the current top card in the draw pile by tapping on said symbol.\n
        If correct, the draw pile\'s top card will become the new top card in the discard and you\'ll have to keep picking until all cards go to the discard pile.
        \n\nYou\'re timed, so check quickly!</string>
    <string name="the_help_description_is_scrollable">(The help description is scrollable!)</string>
    <string name="findDaMatchIntroText">FindDaMatch</string>
    <string name="skipText">Skip</string>
    <string name="find_the_match">FINDDAMATCH\nMain Menu</string>
    <string name="helpText">Help</string>
    <string name="playText">Play</string>
    <string name="options">Options</string>
    <string name="authotNames">By Group Elevent:\nBenjamin Howard\nWilliam Horvath\nYuyang Li\nMichael Mora</string>
    <string name="high_scores">High Scores</string>
</resources>
